@@ -32,14 +32,16 @@ intellij {
 
 runIde {
     // https://bintray.com/jetbrains/intellij-jbr/jbrsdk11-linux-x64#files
-    jbrVersion "11_0_9b1145.21"
+    jbrVersion "11_0_9_1b1145.77"
     ideDirectory "/home/itviewer/Downloads/software/chip"
     jvmArgs '-Didea.platform.prefix=Chip'
+    //for jbr11
+    jvmArgs '--add-exports=java.base/jdk.internal.vm=ALL-UNNAMED','-Djdk.module.illegalAccess.silent=true'
 }
 
 patchPluginXml {
     sinceBuild "203"
-    untilBuild "203.*"
+    untilBuild "211.*"
 }
 
 buildSearchableOptions.onlyIf { false }
